--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "juniorari/utils",
+    "name": "juniorari/jutils",
     "description": "A class with a lot of stuff utils",
     "type": "library",
     "license": "MIT",
@@ -11,7 +11,7 @@
     ],
     "autoload" : {
         "psr-4" : {
-            "JuniorAri\\Utils\\" :  "src/"
+            "JuniorAri\\JUtils\\" :  "src/"
         }
     },
     "minimum-stability": "stable",
